<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/top_headline_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/top_headline_image"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:scaleType="centerCrop"
            android:src="@drawable/default_thumbnail_image_landscape"
            android:tintMode="src_over"
            app:tint="#4d3a3a3a" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/top_headline_title_text"
        style="@style/News.Text.Headline.Small"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/top_headline_title"
        android:scrollbars="vertical"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/top_headline_source_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/top_headline_source_text"
        style="@style/News.Text.Label.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/top_headline_source"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/top_headline_card"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/top_headline_date_text"
        style="@style/News.Text.Label.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/dd_mmmm_yyyy"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/top_headline_source_text"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>